; ModuleID = '/home/carl/AnghaBench/vlc/modules/hw/nvdec/extr_nvdec.c_MapSurfaceChroma.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/hw/nvdec/extr_nvdec.c_MapSurfaceChroma.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VLC_CODEC_NV12 = common dso_local global i32 0, align 4
@VLC_CODEC_P010 = common dso_local global i32 0, align 4
@VLC_CODEC_P016 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @MapSurfaceChroma to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @MapSurfaceChroma(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %19 [
    i32 128, label %7
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* %5, align 4
  %9 = icmp ule i32 %8, 8
  br i1 %9, label %10, label %12

10:                                               ; preds = %7
  %11 = load i32, i32* @VLC_CODEC_NV12, align 4
  store i32 %11, i32* %3, align 4
  br label %20

12:                                               ; preds = %7
  %13 = load i32, i32* %5, align 4
  %14 = icmp ule i32 %13, 10
  br i1 %14, label %15, label %17

15:                                               ; preds = %12
  %16 = load i32, i32* @VLC_CODEC_P010, align 4
  store i32 %16, i32* %3, align 4
  br label %20

17:                                               ; preds = %12
  %18 = load i32, i32* @VLC_CODEC_P016, align 4
  store i32 %18, i32* %3, align 4
  br label %20

19:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %17, %15, %10
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
